--- a/.drone.yml
+++ b/.drone.yml
@@ -3,10 +3,12 @@ type: docker
 name: integration
 
 steps:
--name: build
-image: mcr.microsoft.com/dotnet/sdk
-commands: -dotnet build
+    -name: build
+    image: mcr.microsoft.com/dotnet/sdk
+    commands: 
+        -dotnet build
 
--name: test
-image: mcr.microsoft.com/dotnet/sdk
-commands: -dotnet test
+    -name: test
+    image: mcr.microsoft.com/dotnet/sdk
+    commands: 
+        -dotnet test
