--- a/.drone.yml
+++ b/.drone.yml
@@ -10,7 +10,7 @@ steps:
       - dotnet build
 
   - name: test
-    image: mcr.microsoft.com/dotnet/sdk:latest
+    image: mcr.microsoft.com/dotnet/sdk:7.0
     commands: 
       - cd tests/Blogifier.Tests
       - dotnet test
