--- a/.drone.yml
+++ b/.drone.yml
@@ -6,7 +6,8 @@ steps:
   - name: build
     image: mcr.microsoft.com/dotnet/sdk:latest
     commands: 
-      - dotnet build Blogifier.sln
+      - apt-get update && apt-get install -y nodejs npm
+      - dotnet build
 
   - name: test
     image: mcr.microsoft.com/dotnet/sdk:7.0
